# HP-infinity-canvas

./: README.md  start_all.bat  stop_all.bat
backend/: README.md  config.py  main.py  pyproject.toml  requirements.txt  start.bat
backend/app/: dispatcher.py  schemas.py  websocket_manager.py
backend/app/pipelines/: pipe_a_rembg.py  pipe_b_comfyui.py  pipe_c_api.py  pipe_d_gemini_local.py  pipe_e_photoshop.py
backend/app/utils/: project_manager.py  ps_bridge.py  storage.py
frontend/: README.md  index.html  package-lock.json  package.json  start.bat
frontend/src/: App.jsx  config.js  index.css  main.jsx
frontend/src/components/: CanvasBoard.jsx  CanvasSettingsModal.jsx  CanvasSubComponents.jsx  FloatingToolbar.jsx  Header.jsx  HelpModal.jsx  RightPanel.jsx  RightPanelApi.jsx  RightPanelComfy.jsx  Sidebar.jsx  SlotItem.jsx  ViewModeToggle.jsx  WorkflowConfigModal.jsx  canvasInteraction.js  canvasUtils.js  transformLogic.js
frontend/src/hooks/: useAutoSave.js  useCanvasState.js  useHistory.js  useLayerActions.js  usePersistedState.js  useProjectSystem.js  useWorkflowSystem.js
frontend/src/pages/: Dashboard.jsx  Editor.jsx
frontend/src/tools/: DrawTool.js  SplineTool.js
frontend/src/utils/: fileSystem.js  imageGenerator.js  imageHelpers.js  photoshopUtils.js  websocket.js
workspace/workflow/: workflow_api.json
