[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiofiles>=25.1.0",
    "fastapi>=0.128.0",
    "google-auth>=2.47.0",
    "google-genai==1.60.0",
    "httpx>=0.28.1",
    "litellm>=1.81.0",
    "numpy<2.0",
    "onnxruntime>=1.23.2",
    "photoshop-python-api>=0.24.1",
    "pillow>=12.1.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-multipart>=0.0.21",
    "rembg>=2.0.69",
    "uvicorn[standard]>=0.40.0",
    "websockets>=13.0,<15.1",
]

[tool.setuptools]
packages = ["app"]
